--- a/BlazorValidation/BlazorValidation/BlazorValidation/BlazorValidation.Client/Pages/Index.razor
+++ b/BlazorValidation/BlazorValidation/BlazorValidation/BlazorValidation.Client/Pages/Index.razor
@@ -1,30 +1,36 @@
 ﻿@page "/"
 <!-- Customer entry -->
 @*
-*@
 
   <CustomerEntry1 Title="Please enter your details below"
                   ButtonTitle="Checkout"
                   ButtonClass="btn btn-primary"
                   Customer="@Customer"
                   Submit="@PlaceOrder" />
-
+*@
 @*
-  <CustomerEntry2 Title="Please enter your details below"
+
+  <CustomerEntry1b Title="Please enter your details below"
                   ButtonTitle="Checkout"
                   ButtonClass="btn btn-primary"
                   Customer="@Customer"
                   Submit="@PlaceOrder" />
-*@
 
-@*
-  <CustomerEntry3 Title="Please enter your details below"
-                  ButtonTitle="Checkout"
-                  ButtonClass="btn btn-primary"
-                  Customer="@Customer"
-                  CustomerChanged="UpdateUI"
-                  Submit="@PlaceOrder" />
 *@
+@*
+<CustomerEntry2 Title="Please enter your details below"
+                ButtonTitle="Checkout"
+                ButtonClass="btn btn-primary"
+                Customer="@Customer"
+                Submit="@PlaceOrder" />
+*@
+@*
+*@
+<CustomerEntry3 Title="Please enter your details below"
+                ButtonTitle="Checkout"
+                ButtonClass="btn btn-primary"
+                @bind-Customer="@Customer"
+                Submit="@PlaceOrder" />
 
 <!-- End customer entry -->
 
@@ -39,11 +45,6 @@
   // private State State { get; set; } = new State { Customer = new Customer() };
 
   private Customer Customer { get; set; } = new Customer();
-
-  private void UpdateUI()
-  {
-    this.StateHasChanged();
-  }
 
   private void PlaceOrder()
   {
